--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="stylesheet" href="./css/bangaldesh.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header></header>
+<body class="open-sans-normal">
+    <header>
+        <nav class="navbar">
+            <div class="nav-title">
+                <h1 class="dark-1" >Bangladesh 2.0</h1>
+            </div>
+            <div class="nav-btn-container">
+                <a href="#"><button class="nav-btn"> Sign In</button></a>
+               
+            </div>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
     
