added baner section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body class="open-sans-normal">
     <header>
+        <!-- nav part -->
         <nav class="navbar">
             <div class="nav-title">
                 <h1 class="dark-1" >Bangladesh 2.0</h1>
@@ -20,6 +21,20 @@
                
             </div>
         </nav>
+<!-- banner part -->
+  <div class="banner-section">
+    <div class="banner-content">
+        <h4 class="banner-min-titile ">Bangladesh 2.0</h4>
+        <br>
+        <h1 class="banner-title" >Idea , innovation ,<br>
+            vision and challenges in New Bangladesh.</h1>
+            <br>
+            <button class="banner-btn">Explore New Bangladesh</button>
+    </div>
+    <div class="banner-img">
+        <img src="./assets/hero.png" alt="">
+    </div>
+  </div>
     </header>
     <main></main>
     <footer></footer>
