added Your Opinion Matters section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,53 @@
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
            </div>
 
+<!-- Your Opinion Matters section -->
+ <div class="option-titile">
+    <h1>Your Opinion Matters</h1>
+ </div>
+<div class="table-section">
+    <table>
+        <thead>
+            <tr>
+                <th>Questions</th>
+                <th>Select Your Opinion</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td>
+                    <select>
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Neutral</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td>
+                    <select>
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Neutral</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td>
+                    <select>
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Neutral</option>
+                    </select>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
 
          
     </main>
