added all done work

--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
 
 
     </main>
-    <footer>
 
-    </footer>
     <!-- Donet section -->
  <div class="donet-section">
     <div class="donet-content">
@@ -237,6 +235,25 @@
      </div>
     
     </div>
-    
+    <!-- Subscribe Newsletter -->
+     <div class="news-letter-section">
+        <div class="news-content">
+            <h1>Subscribe Newsletter</h1> <br>
+            <p class="dark-02">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p><br> 
+        </div>
+        <input class="Subscribe-btn" type="email" placeholder="Enter your email here"> <button class="s-btn">Subscribe</button> <br> <br>
+        <p class="last-p dark-02">We promise not to spam you!</p>
+     </div>
+    <footer> <br> <br> <br>
+        <h2 class="last-heading">Bangladesh 2.0</h2>
+       <br> <br> 
+        <hr>
+
+        <div class="social-icon">
+       <img src="./assets/facebook.png" alt="">
+       <img src="./assets/x.png" alt="">
+       <img src="./assets/instagram.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
